[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/T2River.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/useLbl.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.833, 281.441 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 45.4272, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.6005, 288.864 )

[node name="T2River" type="StaticBody2D"]
position = Vector2( 783.719, 52.3264 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="RiverSpan" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="icon" type="Sprite" parent="."]
modulate = Color( 0.960784, 0, 0.721569, 0.133333 )
position = Vector2( -0.861053, -0.663773 )
scale = Vector2( 1.49245, 8.75658 )
z_index = -1
texture = ExtResource( 2 )

[node name="LabelPos" type="Node2D" parent="."]
editor/display_folded = true
scale = Vector2( 0.5, 0.5 )

[node name="useLbl" parent="LabelPos" instance=ExtResource( 3 )]

[node name="TopLimit" type="Area2D" parent="."]
position = Vector2( -0.1399, -199.469 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLimit"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftMargin" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -68.8486, -5.91406 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftMargin"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightMargin" type="Area2D" parent="."]
position = Vector2( 67.3682, -7.50076 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightMargin"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="area_entered" from="TopLimit" to="." method="_on_TopLimit_area_entered"]
[connection signal="body_entered" from="LeftMargin" to="." method="_on_LeftMargin_body_entered"]
[connection signal="body_exited" from="LeftMargin" to="." method="_on_LeftMargin_body_exited"]
[connection signal="body_entered" from="RightMargin" to="." method="_on_RightMargin_body_entered"]
[connection signal="body_exited" from="RightMargin" to="." method="_on_RightMargin_body_exited"]
